# eyos

./: .env  .pre-commit-config.yaml  README.md  eyoshail_sample_payload.json  newstore_sample_payload.json  pyproject.toml  setup.py
examples/: api_client.py
src/eyos/: __main__.py  config.py  main.py
src/eyos/commands/: __init__.py  cli.py
src/eyos/exceptions/: __init__.py  base.py  validations.py
src/eyos/models/: __init__.py  hail.py  newstore.py
src/eyos/routers/: __init__.py  hail_mock.py  newstore.py
src/eyos/services/: __init__.py  hail_client.py  newstore_webhook.py  queue_processor.py  transformer.py
src/eyos/tests/: test_config.py  test_hail_client.py  test_transformer.py  test_webhook_handler.py
src/eyos/utils/: enviroment.py  helpers.py
